[metadata]
name = plover_suggest
version = 0.0.1
description = Plover plugin that pops up a notification with stroke suggestions.
long_description = file: README.md
author = Willem Sonke
author_email = willem@wimiso.nl
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/Willem3141/plover_suggest
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev6
py_modules =
    plover_suggest

[options.entry_points]
plover.command =
    suggest = plover_suggest:suggest
